# MobileGeometricAudioDemo

./: .gitignore  Cargo.toml  README.md  run_all_tests.sh  run_scene_1.sh
src/: bounce.rs  chunk.rs  impulse_response.rs  interpolation.rs  intersection.rs  lib.rs  main.rs  materials.rs  maths.rs  ray.rs  scene.rs  scene_bounds.rs  scene_builder.rs  test_utils.rs
tests/: chunk_tests.rs  interpolation_tests.rs  intersection_tests.rs  intersection_tests_looping_scene.rs  intersection_tests_looping_scene_later_loop.rs  ray_tests.rs
