[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/main.rs"

[lib]
name = "demo"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "warn"
missing_const_for_fn = "warn"
# potentially add these back in the future
return_self_not_must_use = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
unreadable_literal = "allow"
suspicious_operation_groupings = "allow"
match_on_vec_items = "allow"

[dependencies]
approx = "0.5.1"
generic-array = "1.0.0"
itertools = "0.12.1"
nalgebra = "0.32.3"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.1"
roots = "0.0.8"
typenum = "1.17.0"
wav = "1.0.0"
